--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Home</title>
+  <link rel="stylesheet" href="../static/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 
-<body style="background-color: grey;">
+<body>
     <nav class="navbar navbar-expand-lg navbar-light bg-danger">
         <a class="navbar-brand" href="index.html">
             <img src="../images/OSIRIS_Mars_true_color.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
@@ -27,4 +28,64 @@
             </ul>
           </div>
   </nav>
+  <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="jumbotron" style="background-image: url(../images/space_jumbotron.jpg);">
+                    <h1 class="h1" style="color: ivory;">MISSION TO MARS</h1>
+                    <p class="lead">
+                    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="h2">Latest Mars News</h2>
+                <h3 class="h3">Title 1</h3>
+                <p>
+                    This is where the information that was scraped will go
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 col-lg-8">
+                <h2 class="h2">Featured Mars Image</h2>
+                <img class="img-fluid" src="../images/OSIRIS_Mars_true_color.jpg" alt="This is the MARS featured image!">
+            </div>
+            <div class="col-sm-12 col-lg-4">
+                <h2 class="h2">Mars Factsheet</h2>
+                <table class="table table-striped">
+                    <thead>
+                      <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">First</th>
+                        <th scope="col">Last</th>
+                        <th scope="col">Handle</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">1</th>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">2</th>
+                        <td>Jacob</td>
+                        <td>Thornton</td>
+                        <td>@fat</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">3</th>
+                        <td>Larry</td>
+                        <td>the Bird</td>
+                        <td>@twitter</td>
+                      </tr>
+                    </tbody>
+                  </table> 
+            </div>
+        </div>
+  </div>
 </body>
