finishing getting the htmls

--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,4 @@
-.jumbotron-image {
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-  
+.card {
+    width: auto;
+    margin: 2rem;
+}
