--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body style="background-color: rgb(209, 207, 207);">
     <nav class="navbar navbar-expand-lg navbar-light bg-danger">
         <a class="navbar-brand" href="index.html">
             <img src="../images/OSIRIS_Mars_true_color.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
