--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                 <div class="jumbotron" style="background-image: url(../images/space_jumbotron.jpg);">
                     <h1 class="h1" style="color: ivory;">MISSION TO MARS</h1>
                     <p class="lead">
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                    <a class="btn btn-primary btn-lg" href="/scrape" role="button">Get the hottest news!</a>
                     </p>
                 </div>
             </div>
@@ -42,49 +42,20 @@
         <div class="row">
             <div class="col-lg-12">
                 <h2 class="h2">Latest Mars News</h2>
-                <h3 class="h3">Title 1</h3>
+                <h3 class="h3">{{ mars_dict.news_title }}</h3>
                 <p>
-                    This is where the information that was scraped will go
+                    {{ mars_dict.news_paragraph }}
                 </p>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-12 col-lg-8">
                 <h2 class="h2">Featured Mars Image</h2>
-                <img class="img-fluid" src="../images/OSIRIS_Mars_true_color.jpg" alt="This is the MARS featured image!">
+                <img class="img-fluid" src="{{ mars_dict.featured_img }}" alt="This is the MARS featured image!">
             </div>
             <div class="col-sm-12 col-lg-4">
                 <h2 class="h2">Mars Factsheet</h2>
-                <table class="table table-striped">
-                    <thead>
-                      <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
-                      </tr>
-                    </tbody>
-                  </table> 
+                {{ mars_dict.table }}
             </div>
         </div>
   </div>
