--- a/templates/hemispheres.html
+++ b/templates/hemispheres.html
@@ -20,25 +20,27 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="hemispheres.html">Hemispheres</a>
+                <a class="nav-link" href="/hemispheres">Hemispheres</a>
               </li>
             </ul>
         </div>
   </nav>
   <div class="container">
       <div class="row">
-          <div class="col-sm-12 col-md-6">
+        {% for image in mars_dict.hemispheres %}  
+        <div class="col-sm-12 col-md-6">
             <div class="card" >
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" src="{{ image.img_url }}" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">{{ image.title }}</p>
                 </div>
               </div>
           </div>
-          <div class="col-sm-12 col-md-6">
+          {% endfor %}
+          <!-- <div class="col-sm-12 col-md-6">
             <div class="card" >
                 <img class="card-img-top" src="..." alt="Card image cap">
                 <div class="card-body">
@@ -63,9 +65,10 @@
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
-        </div>
+        </div> -->
     </div>
   </div>
 
   </div>
 </body>
+</html>
