--- a/templates/index.html
+++ b/templates/index.html
@@ -14,16 +14,16 @@
 <body style="background-color: rgb(209, 207, 207);">
     <nav class="navbar navbar-expand-lg navbar-light bg-danger">
         <a class="navbar-brand" href="index.html">
-            <img src="../images/OSIRIS_Mars_true_color.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img src="../static/OSIRIS_Mars_true_color.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
             MARS
         </a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="hemispheres.html">Hemispheres</a>
+                <a class="nav-link" href="/hemispheres">Hemispheres</a>
               </li>
             </ul>
           </div>
@@ -31,7 +31,7 @@
   <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <div class="jumbotron" style="background-image: url(../images/space_jumbotron.jpg);">
+                <div class="jumbotron" style="background-image: url(../static/space_jumbotron.jpg);">
                     <h1 class="h1" style="color: ivory;">MISSION TO MARS</h1>
                     <p class="lead">
                     <a class="btn btn-primary btn-lg" href="/scrape" role="button">Get the hottest news!</a>
@@ -55,8 +55,21 @@
             </div>
             <div class="col-sm-12 col-lg-4">
                 <h2 class="h2">Mars Factsheet</h2>
-                {{ mars_dict.table }}
+                {{ mars_dict.table | safe}}
             </div>
         </div>
+            <div class="row">
+              {% for image in mars_dict.hemispheres %}  
+              <div class="col-md-3">
+                  <div class="card" >
+                      <img class="card-img-top" src="{{ image.img_url }}" alt="Card image cap">
+                      <div class="card-body">
+                        <p class="card-text">{{ image.title }}</p>
+                      </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
   </div>
 </body>
+</html>
